# OS1-Projects

./: .gitignore  CMakeLists.txt  autorun.sh
.devcontainer/: Dockerfile  devcontainer.json  vcpkg.json
.github/workflows/: c-cpp.yml
module/: CMakeLists.txt
module/src/: module.c
module/test/: CMakeLists.txt  module_tests.cpp  tests.cpp
